[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.145098, 0.188235, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -175.0
margin_right = 200.0
margin_bottom = 225.0
custom_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "CASTLE FIGHT"
align = 1
valign = 1
uppercase = true

[node name="Subtitle" type="Label" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 400.0
margin_bottom = 84.0
text = "An Autobattle Game"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 400.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 20 )

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 400.0
margin_bottom = 194.0
rect_min_size = Vector2( 0, 50 )
text = "Multiplayer"

[node name="VSingleplayerButton" type="Button" parent="VBoxContainer"]
margin_top = 214.0
margin_right = 400.0
margin_bottom = 264.0
rect_min_size = Vector2( 0, 50 )
text = "VS AI (Singleplayer)"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 284.0
margin_right = 400.0
margin_bottom = 334.0
rect_min_size = Vector2( 0, 50 )
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 354.0
margin_right = 400.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 50 )
text = "Quit"

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -30.0
margin_right = 150.0
margin_bottom = -10.0
text = "Version 0.1.0"
valign = 2

[node name="CreditsLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -30.0
margin_right = -10.0
margin_bottom = -10.0
text = "Based on Castle Fight"
align = 2
valign = 2
